# Thesis

Python_implementaties/FAPEC/: README.md
Python_implementaties/FAPEC/py_fapec/: LeGall53dwt.py  __init__.py  benchmark.py  context.py  detector_sim.py  fapec.py  image.tiff  output_benchmark.txt  output_benchmark_k11.txt  output_benchmark_k16.txt  output_benchmark_k2.txt  output_benchmark_k24.txt  output_benchmark_k8.txt  output_benchmark_try.txt  output_benchmarkv2.txt  subexponential_code.py
Python_implementaties/FELICS/py_felics/: README.rst  image.tiff  image.txt  run.py  (+2 more)
Python_implementaties/FELICS_vs_IWTSEC/: output.txt  output2.txt  run.py
Python_implementaties/line_to_frame/: c  compare.py  iets.txt  main.py  simulated_data_frames.py
Python_implementaties/py_felics/py_felics/: example_384x64_32bits.tiff  output.benchmark.txt  pyproject.toml
Python_implementaties/py_felics/py_felics/py_felics/: __init__.py  benchmark.py  bit_stream.py  context.py  cortex.py  felics.py  golomb_rice_code.py  image.tiff  output.txt  output_benchmark.txt  output_cortex.txt  subexponential_code.py
Python_implementaties/py_felics/py_felics/tests/: test_adjusted_bin_code.py  test_felics.py
Tekst/References/: Exported Items.bib  My Library.bib  fapec.bib  fapec_in_fpga.bib
Tekst/Thesis/: abbreviations.tex  bib.bib  hfdst1.tex  hfdst2.tex  hfdst3.tex  hfdst4.tex  hfdst5.tex  hfdst6.tex  hfdst7.tex  thesis.aux  thesis.bbl  thesis.bcf  thesis.blg  thesis.fdb_latexmk  thesis.fls  thesis.out  thesis.run.xml  thesis.tex  thesis.toc
VHDL/felics/: felics.xpr  vivado.jou
(+135 files in other folders)
